@@ -1,0 +1,14 @@
+Source: {$source}
+Section: devel
+Priority: optional
+Maintainer: {$author}
+Build-Depends: debhelper (>= 7), g++ (>= s4.0)
+Standards-Version: {$standards_version}
+
+Package: {$source}
+Architecture: all
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
