@@ -1,0 +1,6 @@
+Testname: fields-src-bad-version
+Sequence: 6000
+Version: 1.0
+Description: Test for d/control with syntax errors
+Test-For: syntax-error-in-control-file
+
