@@ -1,0 +1,14 @@
+Format: 1.0
+Source: control-file-syntax-error
+Binary: control-file-syntax-error
+Architecture: all
+Version: 1
+Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
+Standards-Version: 3.9.6
+Build-Depends: debhelper (>= 7), g++ (>= s4.0), gcc ((>= 4)
+Checksums-Sha1:
+ @SHA1@ @SIZE@ control-file-syntax-error_1.tar.gz
+Checksums-Sha256:
+ @SHA256@ @SIZE@ control-file-syntax-error_1.tar.gz
+Files:
+ @MD5@ @SIZE@ control-file-syntax-error_1.tar.gz
