@@ -4,9 +4,10 @@ lintian (2.5.31) UNRELEASED; urgency=medium
     + [BR] Correct a typo on tag name and do not raise
       bad-intended-distribution if distribution is still
       set to UNRELEASED.  (Closes: #765344).
-  * checks/fields.desc:
+  * checks/fields.{desc,pm}:
     + [BR] Add reference to build-depends-on-metapackage
       (Closes: #767107).
+    + [BR] Check source version (Closes: #749103).
   * checks/files.{desc,pm}:
     + [BR] Rename compressed-objects.inv to
       file-should-not-be-compressed and use it for doxygen
